--- a/messaging_app/messaging_app/Dockerfile
+++ b/messaging_app/messaging_app/Dockerfile
@@ -1,24 +1,18 @@
 # messaging_app/Dockerfile
 
-# Use official Python base image
 FROM python:3.10-slim
 
-# Set environment variables
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
-# Set work directory
 WORKDIR /app
 
-# Install dependencies
 COPY requirements.txt .
 RUN pip install --upgrade pip && pip install -r requirements.txt
 
-# Copy source code
 COPY . .
 
-# Expose port (informational)
 EXPOSE 8000
 
-# Default command to run the app
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+# Use Gunicorn with `-p`-like argument (`--bind`)
+CMD ["gunicorn", "my_django_app.wsgi:application", "--bind", "0.0.0.0:8000"]
