--- a/messaging_app/messaging_app/Jenkinsfile
+++ b/messaging_app/messaging_app/Jenkinsfile
@@ -16,6 +16,16 @@ pipeline {
             }
         }
 
+        stage('Display Git Branch') {
+            steps {
+                sh '''
+                cd messaging_app
+                echo "Current Git Branch:"
+                git branch
+                '''
+            }
+        }
+
         stage('Install Dependencies') {
             steps {
                 sh '''
